--- a/SwiftStock(Redo)/Pages/Cashier.cshtml
+++ b/SwiftStock(Redo)/Pages/Cashier.cshtml
@@ -26,7 +26,7 @@
                 </button>
             </li>
             <li>
-                <button onclick="window.location.href='/Account/Login';" class="flex items-center w-full p-2 text-left rounded-lg hover:bg-gray-200">
+                <button onclick="window.location.href='/Login';" class="flex items-center w-full p-2 text-left rounded-lg hover:bg-gray-200">
                     <i class="fas fa-sign-out-alt mr-2"></i> Logout
                 </button>
             </li>
